--- a/index.html
+++ b/index.html
@@ -2,19 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="NovaVenture - Explore investment theses, policy updates, and global tech briefings" />
-    <meta name="keywords" content="NovaVenture, investment, technology, policy updates, global tech" />
-    <meta property="og:title" content="NovaVenture" />
-    <meta property="og:description" content="Explore investment theses, policy updates, and global tech briefings" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://novaventure.vercel.app" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta name="theme-color" content="#0A0F24" />
     <title>NovaVenture</title>
   </head>
   <body>
